Replace all remaining usage of  ES HLRC